# tools

./: .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
.config/git-hooks/: pre-commit
.github/workflows/: check.yaml
jq/: Cargo.toml
jq/src/: lexer.rs  main.rs
